...
    <string name="SHIL">SHIL</string>
    <string name="DOLR">DOLR</string>
    <string name="QUID">QUID</string>
    <string name="PENNY">PENNY</string>
    <string name="transfer">Transfer</string>
    <string name="GOLD">GOLD</string>
    <string name="wallet">Wallet</string>
    <string name="bank">Bank</string>
    <string name="friends">Friends</string>
    <string name="log_out">Log out</string>
    <string name="reward">Reward</string>
    <string name="requests">Requests</string>
    <string name="add">Add</string>
    <string name="e_mail">E-mail</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="normal">Normal</string>
    <string name="treasure_hunt">Treasure Hunt</string>
    <string name="select_game_mode">Select Game Mode</string>
    <string name="treasure_hunt_explain">In Treasure Hunt mode coins you collect will have extra value, but you can only see nearby coins on the map</string>
    <string name="loading">Loading......</string>
    <string name="distance">Distance</string>
    <string name="collect">collect</string>
    <string name="receive_gifts">Receive Gifts</string>
    <string name="paste_instruction">Paste friend\'s UID here:</string>
...
    <string name="or">or</string>
    <string name="copy_instruction">Copy your own UID</string>
    <string name="add_friend_tips">Tips: To add friends, use your friends\' UID to send them requests or you can copy your own UID, send to your friends through social network and let them send requests to you!</string>
    <string name="deposit">Deposit</string>
    <string name="gift">Gift</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="receive">receive</string>
    <string name="reject">reject</string>
    <string name="accept">accept</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">confirm</string>
    <string name="cancel">Cancel</string>
</resources>

