<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="309dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paste_instruction"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/add_friend_dialog_et_uid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_weight="0.5"
            android:hint="@string/user_id"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/add_friend_dialog_btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/add_friend_dialog_btn_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_instruction" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_friend_tips" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/add_friend_dialog_btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close" />
</LinearLayout>
